<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--Using a Constraint based layout as this view would normally contain nested Linear Layouts from the Text and Edit Text views  -->

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/instructions_title_view2"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/shoe_details_title"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/edit_shoe_name"
            app:layout_constraintStart_toStartOf="@+id/edit_shoe_name" />

        <TextView
            android:id="@+id/shoe_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_company"
            app:layout_constraintBottom_toTopOf="@+id/edit_shoe_company"
            app:layout_constraintStart_toStartOf="@+id/edit_shoe_company" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toTopOf="@+id/edit_shoe_size"
            app:layout_constraintStart_toStartOf="@+id/edit_shoe_size" />

        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/shoe_description"
            app:layout_constraintBottom_toTopOf="@+id/edit_shoe_description"
            app:layout_constraintStart_toStartOf="@+id/edit_shoe_description" />

        <EditText
            android:id="@+id/edit_shoe_name"
            android:layout_width="174dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:text="@={shoeViewModel.currentShoe.name}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002" />

        <EditText
            android:id="@+id/edit_shoe_size"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/size_hint"
            android:inputType="numberDecimal"
            android:text="@={`` + shoeViewModel.currentShoe.size}"
            app:layout_constraintBaseline_toBaselineOf="@+id/edit_shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/edit_shoe_name" />

        <EditText
            android:id="@+id/edit_shoe_company"
            android:layout_width="174dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/company_hint"
            android:inputType="text"
            android:text="@={shoeViewModel.currentShoe.company}"
            app:layout_constraintStart_toStartOf="@+id/edit_shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_name" />

        <EditText
            android:id="@+id/edit_shoe_description"
            android:layout_width="174dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/description_hint"
            android:inputType="textLongMessage"
            android:text="@={shoeViewModel.currentShoe.description}"
            app:layout_constraintStart_toStartOf="@+id/edit_shoe_size"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_size" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/shoeStoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/cancel_shoe"
            android:textColorHighlight="@color/lightBlue"
            android:textColorHint="@color/lightBlue"
            android:textColorLink="@color/lightBlue"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/shoeStoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lightBlue"
            android:text="@string/save_shoe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.79"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_description"
            app:layout_constraintVertical_bias="0.498" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
