<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!--Using a Linear Layout as this view has a very low complexity. -->

    <LinearLayout
        android:id="@+id/welcome_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="32dp"
        android:orientation="vertical"
        tools:context=".screens.welcome.InstructionsFragment">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/instructions_title_view"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/instructions_title"
                android:textSize="34sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center">

            <TextView
                android:id="@+id/instructions_body_view_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/instructions_body_1"
                android:textAlignment="center"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center">

            <TextView
                android:id="@+id/instructions_body_view_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/instructions_body_2"
                android:textAlignment="center"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center">

            <Button
                android:id="@+id/enter_store_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/enter_store"
                android:textColorHighlight="@color/lightBlue"
                android:textColorHint="@color/lightBlue"
                android:textColorLink="@color/lightBlue"
                android:theme="@style/shoeStoreButton" />
        </RelativeLayout>
    </LinearLayout>
</layout>
